--- a/style.css
+++ b/style.css
@@ -11,6 +11,16 @@
     margin-right: 40px;
   }
   
+
+  @media (max-width:768px) {
+    .twenty-one{
+      font-size: 120px !important;
+    }      
+    .image{
+      width: 100px;
+      height: 100px;
+    }
+  }
   .twenty-one {
     font-size: 240px;
     font-family: "Josefin Sans";
@@ -29,7 +39,7 @@
   }
   
   .cover {
-    background: rgba(0, 0, 0, 0.62);
+    background: rgba(0, 0, 0, 0.52);
     position: absolute;
     width: 100%;
     height: 100%;
@@ -77,7 +87,3 @@
     background-position: center center;
     background-size: contain;
   }
-  .twenty-one .block{
-    
-  }
-  
