--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@
   }
   
   body {
-    background: url("Collage\ Maker-18-Oct-2023-12-14-PM-9446.jpg");
+    background: url("collage.jpg");
     background-position: center center;
     background-size: contain;
   }
